# Aggressive-portfolio-bot

./: .env.example  .gitignore  Dockerfile  README.md  aggressive_portfolio_bot.py  app.py  bot.py  callbacks.py  docker-compose.yml  env.py  formatters.py  gitignore.py  handlers.py  keyboards.py  pyproject.toml  requirements.txt
brokers/: alpaca.py  execution_router.py  ibkr.py  models.py  prop_firm  robinhood.py  tradier.py  tradovate.py
config/: README.txt  __init__.py  config_service.py  filter_presets.py  logging_config.py  options.py  schedules.py  settings.py  symbols.py  universe.py
core/: context.py  enums.py  events.py  exceptions.py  scheduler.py  utils.py
data/: cache.py  econ_calendar.py  filter_mapper.py  market_data.py  news_data.py  scanners.py  sentiment.py  universe_filter.py
database/: db.py  ecosystem_state_repository.py  migrations.py  repositories.py  settings_repository.py  settings_respository.py  spy_scan_repository.py
docs/: AUDIT_DEPLOYMENT_CHECKLIST.md  FILE_MANIFEST.md  RENDER_ENV_VARS.md
execution/: ladder_manager.py  live_position_state.py  multi_leg.py  safeguards.py  strategy_execution_profiles.py  trailing_manager.py
ledger/: context.py  schemas.py  sheets_client.py  trade_logger.py
risk/: kill_switch.py  position_sizing.py  risk_engine.py  structure.py
sandbox/: analyzers.py  backtrader_engine.py  data_feed.py  scenario_runner.py
scripts/: audit_smoke_check.py
services/: adaptive_exit_engine.py  adaptive_position_sizing_engine.py  ai_consensus_engine.py  ai_trade_review_engine.py  alert_service.py  config_service.py  (+56 more)
(+43 files in other folders)
