[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aggressive-portfolio-bot"
version = "1.0.0"
description = "Async multi-broker trading bot with Telegram control plane"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
